<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/thaliabg"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="22dp" >

        <Button
            android:id="@+id/btnCambiarContr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="lanzarCambiarPass"
            android:text="@string/cambiarcontrasena"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btnCambiarAvatar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="cambiarImagenPerfil"
            android:text="@string/cambiaravatar"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/tvFormatosJugados"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#80980000"
            android:gravity="center"
            android:text="@string/formatosjugados"
            android:textColor="#FFFFFF" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#80FFFFFF"
            android:stretchColumns="*" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <CheckBox
                    android:id="@+id/cbVintage"
                    style="Widget.Holo.CompoundButton.CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vintage"
                    android:textColor="#000000" />

                <CheckBox
                    android:id="@+id/cbLegacy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/legacy"
                    android:textColor="#000000" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <CheckBox
                    android:id="@+id/cbModern"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/modern"
                    android:textColor="#000000" />

                <CheckBox
                    android:id="@+id/cbStandard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/standard"
                    android:textColor="#000000" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <CheckBox
                    android:id="@+id/cbPauper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pauper"
                    android:textColor="#000000" />

                <CheckBox
                    android:id="@+id/cbCommander"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/commander"
                    android:textColor="#000000" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <CheckBox
                    android:id="@+id/cbCasual"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/casual"
                    android:textColor="#000000" />

                <CheckBox
                    android:id="@+id/cbOtros"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/otros"
                    android:textColor="#000000" />
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/tvPais"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#80980000"
            android:gravity="center"
            android:text="@string/pais"
            android:textColor="#FFFFFF" />

        <Spinner
            android:id="@+id/spnPaisBJ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#80FFFFFF"
            android:entries="@array/paises" />

        <TextView
            android:id="@+id/tvProvincia"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#80980000"
            android:gravity="center"
            android:text="@string/provincia"
            android:textColor="#FFFFFF" />

        <Spinner
            android:id="@+id/spnProvinciaBJ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#80FFFFFF"
            android:entries="@array/provincias" />

        <TextView
            android:id="@+id/tvCP"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#80980000"
            android:gravity="center"
            android:text="@string/codigopostal"
            android:textColor="#FFFFFF" />

        <EditText
            android:id="@+id/etCP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#80FFFFFF"
            android:ems="10"
            android:inputType="numberSigned" >

            <requestFocus android:layout_width="wrap_content" />
        </EditText>

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#80980000"
            android:gravity="center"
            android:text="@string/email"
            android:textColor="#FFFFFF" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#80FFFFFF"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/tvDCI"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#80980000"
            android:gravity="center"
            android:text="@string/numerodci"
            android:textColor="#FFFFFF" />

        <EditText
            android:id="@+id/etDCI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#80FFFFFF"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/tvCOlor"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#80980000"
            android:gravity="center"
            android:text="@string/colorfavorito"
            android:textColor="#FFFFFF" />

        <RadioGroup
            android:id="@+id/rgColorFav"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#80FFFFFF"
            android:dividerPadding="0dp"
            android:orientation="vertical"
            android:paddingLeft="22sp" >

            <RadioButton
                android:id="@+id/rbRojo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rojo"
                android:textColor="#000000" />

            <RadioButton
                android:id="@+id/rbVerde"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verde"
                android:textColor="#000000" />

            <RadioButton
                android:id="@+id/rbBlanco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blanco"
                android:textColor="#000000" />

            <RadioButton
                android:id="@+id/rbAzul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/azul"
                android:textColor="#000000" />

            <RadioButton
                android:id="@+id/rbNegro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/negro"
                android:textColor="#000000" />

            <RadioButton
                android:id="@+id/rbIncoloro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/incoloro"
                android:textColor="#000000" />
        </RadioGroup>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12sp"
            android:stretchColumns="*" >

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/btnVolver"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="volverMenuPrincipal"
                    android:text="@string/volver"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/btnGuardar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="guardarBBDD"
                    android:text="@string/guardar"
                    android:textColor="#FFFFFF" />
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/btnEliminarCuentaCF"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12sp"
            android:onClick="eliminarCuenta"
            android:text="Eliminar Cuenta"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</ScrollView>