<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bgbuscartorneos"
        android:orientation="vertical"
        android:padding="22dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#80980000"
            android:gravity="center"
            android:text="@string/nombredeltorneo"
            android:textColor="#FFFFFF" />

        <EditText
            android:id="@+id/etNombreTorneoBT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#80FFFFFF"
            android:ems="10" >
        </EditText>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#80980000"
            android:gravity="center"
            android:text="@string/provincia"
            android:textColor="#FFFFFF" />

        <CheckBox
            android:id="@+id/cbBuscarProvinciaBT"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#80FFFFFF"
            android:text="@string/buscarprovincia" />

        <Spinner
            android:id="@+id/spnProvinciaBT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#AAFFFFFF"
            android:entries="@array/provincias" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#80980000"
            android:gravity="center"
            android:text="@string/fecha"
            android:textColor="#FFFFFF" />

        <CheckBox
            android:id="@+id/cbBuscarFechaBT"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#80FFFFFF"
            android:text="@string/buscarfecha" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <DatePicker
                android:id="@+id/dpATFechaBT"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#80FFFFFF"
                android:calendarViewShown="false" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#80980000"
            android:gravity="center"
            android:text="@string/precio"
            android:textColor="#FFFFFF" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#80FFFFFF"
            android:gravity="center"
            android:paddingLeft="23dp" >

            <CheckBox
                android:id="@+id/cbMayorQueBT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mayorque" />

            <EditText
                android:id="@+id/etPrecioMayorBT"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="4" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/simboloeuro"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#80FFFFFF"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="23dp" >

            <CheckBox
                android:id="@+id/cbMenorQueBT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menorque" />

            <EditText
                android:id="@+id/etPrecioMenorBT"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="4" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/simboloeuro" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#80980000"
            android:gravity="center"
            android:text="@string/formatosjugados"
            android:textColor="#FFFFFF" />

        <CheckBox
            android:id="@+id/cbformatoJugadoBT"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#80FFFFFF"
            android:text="@string/buscarformato" />

        <Spinner
            android:id="@+id/spnFormatoBT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#AAFFFFFF"
            android:entries="@array/formatos" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12sp"
            android:stretchColumns="*" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/btnVolverBT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="lanzarVolverMP"
                    android:text="@string/volver"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/btnBuscarBT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="lanzarBuscarTorneos"
                    android:text="@string/buscar"
                    android:textColor="#FFFFFF" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</ScrollView>